nitter/nitter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: nitter
  name: nitter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nitter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: nitter
    spec:
      containers:
      - image: zedeus/nitter:latest
        livenessProbe:
          exec:
            command: - wget -nv --tries=1 --spider http://127.0.0.1:8080/Jack/status/20 || exit 1
          failureThreshold: 2
          periodSeconds: 30
          timeoutSeconds: 5
        name: nitter
        ports:
        - containerPort: 8080
        resources: {}
        securityContext:
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /etc/nitter
          name: nitter-config
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: nitter-config
        secret:
          secretName: nitter-conf
            - key: nitter-config
              path: nitter.conf
