nitter/nitter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: nitter
  name: nitter
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: nitter
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: nitter-redis
  name: nitter-redis
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  selector:
    io.kompose.service: nitter
